--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,42 @@
-alembic==1.7.7
-Faker==13.12.0
-Flask==1.1.2
-flask_admin==1.6.0
-flask_login==0.6.1
-flask_migrate==3.1.0
-Flask_SQLAlchemy==2.4.4
-flask_wtf==1.0.1
+alembic==1.0.11
+autograd==1.4
+Click==7.0
+colorama==0.4.4
+cycler==0.11.0
+dill==0.3.4
+Flask==0.12.4
+Flask-Admin==1.5.3
+Flask-Login==0.6.0
+Flask-Migrate==2.5.2
+Flask-SQLAlchemy==2.4.0
+Flask-WTF==0.14.2
+fonttools==4.33.3
+future==0.18.2
+importlib-metadata==4.11.3
+itsdangerous==1.1.0
+Jinja2==2.10.1
+joblib==1.1.0
+kiwisolver==1.4.2
 Lifetimes==0.11.3
-matplotlib==3.4.3
+Mako==1.1.0
+MarkupSafe==1.1.1
+matplotlib==3.5.2
 mlxtend==0.19.0
-numpy==1.21.2
-pandas==1.3.2
-scikit_learn==1.1.1
-seaborn==0.11.2
-SQLAlchemy==1.3.22
-WTForms==3.0.1
+numpy==1.21.6
+packaging==21.3
+pandas==1.3.5
+Pillow==9.1.0
+pyparsing==3.0.8
+python-dateutil==2.8.0
+python-editor==1.0.4
+pytz==2022.1
+scikit-learn==1.0.2
+scipy==1.7.3
+six==1.12.0
+sklearn==0.0
+SQLAlchemy==1.3.7
+threadpoolctl==3.1.0
+typing-extensions==4.1.1
+Werkzeug==0.15.5
+WTForms==2.2.1
+zipp==3.7.0
